test/positive/internal_helper_public_exception/Main.hx
@:rustAllowRaw
class Main {
	static function main():Void {
		var value:Int = reflaxe.rust.macros.RustInjection.__rust__("1i32");
		trace(value);
	}
}
