test/negative/metal_raw_rust/Main.hx
class Main {
	static function main() {
		var sum:Int = untyped __rust__("1 + 2");
		trace(sum);
	}
}
